Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>HEM TOURS LTD | Transport &amp; Car Rental Mauritius</title>
-    <meta name="description" content="HEM TOURS LTD — reliable transport and car rental in Mauritius. Airport transfers, island sightseeing, hotel transfers and guided tours." />
+    <meta name="description" content="HEM TOURS LTD — reliable Mauritius taxi, transport and car rental in Mauritius. Airport transfers, island sightseeing, hotel transfers, guided tours and vacation services in Mauritius." />
+    <meta name="keywords" content="Mauritius taxi, Mauritius transport, Mauritius tours, Mauritius car rental, airport transfer Mauritius, island tours, guided tours, Mauritius vacation, vacation island, best beach vacation, Mauritius vacations, transport service Mauritius" />
     <meta name="theme-color" content="#0a6d9e" />
     <meta property="og:title" content="HEM TOURS LTD | Transport &amp; Car Rental Mauritius" />
-    <meta property="og:description" content="Reliable airport transfers, island tours and car rentals across Mauritius." />
+    <meta property="og:description" content="Best Mauritius taxi, transport and car rental service. Airport transfers, island vacation tours and beach vacation experiences across Mauritius." />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://hemtoursltd.com/og-image.jpg" />
+    <meta property="og:url" content="https://hemtoursltd.com" />
+    <link rel="canonical" href="https://hemtoursltd.com" />
+    <meta name="geo.region" content="MU" />
+    <meta name="geo.placename" content="Mauritius" />
+    <meta name="language" content="English" />
     <style>
          :root {
             --brand: #0a6d9e;
@@ -235,6 +242,41 @@
 </head>
 
 <body>
+    <!-- Schema.org Business Markup -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "HEM TOURS LTD",
+      "description": "Transport and car rental services in Mauritius",
+      "url": "https://hemtoursltd.com",
+      "telephone": "+230 5254 3368",
+      "email": "Hemtoursltd@hotmail.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Martin Luther King Street",
+        "addressLocality": "Goodlands",
+        "addressCountry": "MU"
+      },
+      "priceRange": "$$",
+      "startDate": "2026",
+      "areaServed": "Mauritius",
+      "servesCuisine": ["Tours", "Transport", "Car Rental"],
+      "image": "https://hemtoursltd.com/og-image.jpg"
+    }
+    </script>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://hemtoursltd.com"
+      }]
+    }
+    </script>
     <header role="banner">
         <div class="header-content">
             <h1>HEM TOURS LTD</h1>
@@ -247,9 +289,8 @@
         <section>
 
             <div class="card" aria-labelledby="about-mauritius">
-                <h2 id="about-mauritius">About Mauritius</h2>
-                <p>Discover Mauritius, an island paradise where luxury meets nature. Wake up to soft ocean breezes, unwind on immaculate white-sand beaches, and indulge in world-class resorts overlooking crystal-clear lagoons. From serene spa retreats to
-                    sunset cruises and fine island cuisine, Mauritius is the ultimate destination for relaxation, elegance, and unforgettable moments.
+                <h2 id="about-mauritius">About Mauritius - Your Perfect Vacation Island</h2>
+                <p>Discover Mauritius, the ultimate vacation island and best beach vacation destination where luxury meets nature. Wake up to soft ocean breezes, unwind on immaculate white-sand beaches, and indulge in world-class resorts overlooking crystal-clear lagoons. From serene spa retreats to sunset cruises and fine island cuisine, Mauritius is the perfect vacation island for relaxation, elegance, and unforgettable moments.
                 </p>
                 <p>Mauritius is a dream destination for romance. Walk hand in hand along golden beaches, watch the sun melt into the ocean, and share magical moments beneath palm trees and starlit skies. With its intimate lagoons, breathtaking scenery, and
                     warm island charm, Mauritius is the perfect setting for love, honeymoons, and lifelong memories.For the adventurous soul, Mauritius offers endless excitement. Swim with dolphins, explore hidden waterfalls, hike through lush rainforests,
@@ -257,9 +298,8 @@
             </div>
 
             <div class="card" aria-labelledby="about-hem">
-                <h2 id="about-hem">About HEM TOURS LTD</h2>
-                <p>Our office is conveniently located at Martin Luther King Street, Goodlands. We provide reliable transport services across the island, driven by professional and experienced chauffeurs who ensure your comfort and safety at all times. In
-                    addition, we offer car rental services, giving you the freedom to explore Mauritius at your own pace. Whether you choose a chauffeured tour or a rental vehicle, HEM TOURS LTD is your trusted partner for island travel.</p>
+                <h2 id="about-hem">About HEM TOURS LTD - Mauritius Transport & Taxi Services</h2>
+                <p>Our office is conveniently located at Martin Luther King Street, Goodlands. We provide reliable Mauritius transport and taxi services across the island, driven by professional and experienced chauffeurs who ensure your comfort and safety at all times. In addition, we offer car rental services, giving you the freedom to explore Mauritius at your own pace during your vacation. Whether you choose a chauffeured tour or a rental vehicle, HEM TOURS LTD is your trusted partner for Mauritius transport and vacation experiences.</p>
                 <p>To ensure transparency and build trust with our customers, all payments are made only after the services have been successfully provided. This guarantees peace of mind and reflects our commitment to honesty, reliability, and customer satisfaction.</p>
             </div>
 
@@ -276,15 +316,15 @@
                     <div class="activity">
                         <!-- Island tour image -->
                         <img src="island-tour.jpg" alt="Island sightseeing tour bus on a coastal road" loading="lazy">
-                        <h4>🏝️ Island Sightseeing Tours</h4>
-                        <p>Guided sightseeing tours covering beaches, waterfalls, viewpoints and cultural landmarks.</p>
+                        <h4>🏝️ Island Sightseeing Tours & Mauritius Tours</h4>
+                        <p>Guided Mauritius tours covering beaches, waterfalls, viewpoints and cultural landmarks. Perfect for your Mauritius vacation.</p>
                     </div>
 
                     <div class="activity">
                         <!-- Hotel transfer image -->
                         <img src="hotel-transfer.jpg" alt="Hotel transfer car in front of resort" loading="lazy">
-                        <h4>🏨 Hotel Transfers</h4>
-                        <p>Reliable transport between hotels, resorts, villas and attractions throughout the island.</p>
+                        <h4>🏨 Hotel Transfers & Mauritian Taxi Service</h4>
+                        <p>Reliable Mauritius taxi and transport services between hotels, resorts, villas and attractions throughout the island. Your vacation transport partner.</p>
                     </div>
 
                     <div class="activity">
@@ -304,8 +344,8 @@
                 </div>
             </div>
 
-            <div class="card " aria-labelledby="top-activities ">
-                <h2 id="top-activities ">Top Activities in Mauritius</h2>
+            <div class="card " aria-labelledby="top-activities">
+                <h2 id="top-activities">Top Activities in Mauritius</h2>
                 <div class="activity-grid ">
                     <div class="activity "><img src="ile-aux-cerfs.jpg" alt="Île aux Cerfs beach " loading="lazy ">
                         <h4>Île aux Cerfs Boat Tours</h4>
@@ -336,15 +376,13 @@
             </div>
 
             <!-- Moved: People Also Ask is now BELOW Top Activities -->
-            <div class="card " aria-labelledby="faq ">
-                <h2 id="faq ">People Also Ask</h2>
-                <p><strong>What is Mauritius best known for?</strong><br>Mauritius is renowned for its stunning white-sand beaches, luxury resorts, unique flora and fauna, and its historical association with the extinct dodo bird. The island is also famous
-                    for the spectacular underwater “waterfall” illusion seen off the coast of Le Morne.</p>
+            <div class="card " aria-labelledby="faq">
+                <h2 id="faq">People Also Ask</h2>
+                <p><strong>What is Mauritius best known for?</strong><br>Mauritius is renowned as the best beach vacation island, known for its stunning white-sand beaches, luxury resorts, unique flora and fauna, and its historical association with the extinct dodo bird. The vacation island of Mauritius is also famous for the spectacular underwater "waterfall" illusion seen off the coast of Le Morne.</p>
 
-                <p><strong>How many days are enough for Mauritius?</strong><br>A stay of 7–14 days allows visitors to fully enjoy the beaches, water sports, scenic island tours, hiking opportunities, and cultural attractions such as the UNESCO World Heritage
-                    sites of Aapravasi Ghat and Le Morne Brabant.</p>
+                <p><strong>How many days are enough for a Mauritius vacation?</strong><br>A Mauritius vacation of 7–14 days allows visitors to fully enjoy the best beaches, water sports, scenic Mauritius tours and island tours, hiking opportunities, and cultural attractions such as the UNESCO World Heritage sites of Aapravasi Ghat and Le Morne Brabant.</p>
 
-                <p><strong>What do people do in Mauritius?</strong><br>Swimming, scuba diving, boating, dolphin watching, rainforest hikes, and tasting authentic Mauritian cuisine.</p>
+                <p><strong>What do people do during Mauritius vacations?</strong><br>Swimming, scuba diving, boating, dolphin watching, rainforest hikes, and tasting authentic Mauritian cuisine are popular vacation activities. Use our Mauritius taxi and transport services to explore the island.</p>
 
                 <p><strong>Is there a dress code?</strong><br>No strict dress code. Beachwear is acceptable. Some hotels may require smart-casual attire for dining.</p>
 
@@ -353,8 +391,8 @@
                 <p><strong>Does Mauritius have mosquitoes?</strong><br>Yes, especially in forests. They are not malaria carriers locally, but repellent is recommended.</p>
             </div>
 
-            <div class="card " aria-labelledby="location ">
-                <h2 id="location ">Our Location</h2>
+            <div class="card " aria-labelledby="location">
+                <h2 id="location">Our Location</h2>
                 <iframe title="Map to Martin Luther King Street Goodlands " src="https://www.google.com/maps?q=Martin%20Luther%20King%20Street%20Goodlands%20Mauritius&output=embed " width="100% " height="350 " style="border:0
                             " allowfullscreen loading="lazy "></iframe>
             </div>
@@ -392,15 +430,15 @@
                 <button type="submit" class="focus-ring">📲 Book via WhatsApp</button>
             </form>
 
-            <div class="card " aria-labelledby="contact ">
-                <h2 id="contact ">Contact Us</h2>
+            <div class="card " aria-labelledby="contact">
+                <h2 id="contact">Contact Us</h2>
                 <p>📞 <a href="tel:+23052543368 ">+230 5254 3368</a><br>📧 <a href="mailto:Hemtoursltd@hotmail.com ">Hemtoursltd@hotmail.com</a></p>
             </div>
 
         </section>
     </main>
 
-    <footer role="contentinfo ">
+    <footer role="contentinfo">
         © 2026 HEM TOURS LTD | Transport &amp; Car Rental Mauritius
     </footer>
 
