--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta name="geo.region" content="MU" />
     <meta name="geo.placename" content="Mauritius" />
     <meta name="language" content="English" />
+    <meta name="google-site-verification" content="Cog42Yb_qJ1ATqrgx64nngOygl-n4CGkHYpov72Bxpg" />
     <style>
          :root {
             --brand: #0a6d9e;
@@ -494,3 +495,6 @@ Service: ${service}`;
 </body>
 
 </html>
+
+</html>
+
